fix: add class to position icon behind product slider

--- a/wp-content/themes/il-panino-theme/assets/scss/components/_product-slider.scss
+++ b/wp-content/themes/il-panino-theme/assets/scss/components/_product-slider.scss
@@ -19,6 +19,10 @@
         max-height: 45%;
         width: auto;
 
+        &.top-25 {
+            top: 25%;
+        }
+
         img {
             height: 100%;
             width: auto;
